tests/models/struct/named/bool/fail/min_length.stderr
error: Support condition is alias, default and validate
 --> tests/models/struct/named/bool/fail/min_length.rs:5:5
  |
5 |     value: bool,
  |     ^^^^^
